--- a/apps/chrome-bookmark-categorizer-visualizer/src/app/app.component.html
+++ b/apps/chrome-bookmark-categorizer-visualizer/src/app/app.component.html
@@ -1,1 +1,5 @@
-<chrome-bookmark-categorizer-visualizer-nx-welcome></chrome-bookmark-categorizer-visualizer-nx-welcome>
+<div class="header">
+    <h2>Backup viewer</h2>
+</div>
+<router-outlet></router-outlet>
+
