--- a/apps/chrome-bookmark-categorizer-visualizer/src/app/app.component.html
+++ b/apps/chrome-bookmark-categorizer-visualizer/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <h2>Backup viewer - Hello!</h2>
+    <h2>Backup viewer - My personal app!</h2>
 </div>
 <router-outlet></router-outlet>
 
