--- a/apps/chrome-bookmark-categorizer-visualizer/src/app/app.component.html
+++ b/apps/chrome-bookmark-categorizer-visualizer/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="header">
-    <h2>Backup viewer - My personal app!</h2>
-</div>
+    <h2>Backup viewer - Tab Categorizer</h2>
 <router-outlet></router-outlet>
 
