--- a/apps/chrome-bookmark-categorizer-visualizer/src/app/app.component.html
+++ b/apps/chrome-bookmark-categorizer-visualizer/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="header">
-    <h2>Backup viewer - Tab Categorizer</h2>
+  <h2>Backup viewer - Tab Categorizer</h2>
+</div>
 <router-outlet></router-outlet>
-
