style changes to the app

--- a/apps/chrome-bookmark-categorizer-visualizer/src/app/home/home.component.html
+++ b/apps/chrome-bookmark-categorizer-visualizer/src/app/home/home.component.html
@@ -4,6 +4,4 @@
         <h3>{{backup.timeStamp | date: 'medium'}}</h3>
     </div>
 </div>
-
-<div class="circle">
-</div>
+<div class="filter"></div>
