--- a/apps/chrome-bookmark-categorizer-visualizer/src/app/window-view/window-view.component.scss
+++ b/apps/chrome-bookmark-categorizer-visualizer/src/app/window-view/window-view.component.scss
@@ -2,22 +2,19 @@
     display: flex;
     flex: 1;
     align-self: stretch;
-    border: 1px solid red;
-    background-color: rgb(20, 20, 20);
+    background-image: url(../../assets/background.webp);
     position: relative;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
 
-.circle {
+.filter {
     position: absolute;
-    width: 700px;
-    height: 700px;
-    border-radius: 50%;
-    background-color: #ff4e00;
-    background-image: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);
-    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.7;
 }
 
 .windows {
@@ -34,7 +31,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    background-color: rgba(255,255,255, 0.1);
+    background-color: rgba(255, 255, 255, 0.1);
     height: 200px;
     min-width: 350px;
     color: #ffffff;
